--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 <meta charset="utf-8">
 <title>Il n y a pas de fuite sur le toit, mais bien sur que si il y en a une</title>
 </head>
+  <HTML>
+<HEAD>
+    <TITLE>Conteneur et ses cadres</TITLE>
+ 
+<FRAMESET rows="64,*,64">
+    <FRAME name="haut" scrolling="no" noresize target="sommaire">
+ 
+    <FRAMESET cols="150,*">
+        <FRAME name="sommaire" target="principal">
+        <FRAME name="principal">
+    </FRAMESET>
+ 
+    <FRAME name="bas" scrolling="no" noresize target="sommaire">
+ 
+    <NOFRAMES>
+        <P>Cette page utilise des cadres, mais votre navigateur ne les prend pas en charge.
+    </NOFRAMES>
+</FRAMESET>
 
 <body>
 </body>
