--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <P>Cette page utilise des cadres, mais votre navigateur ne les prend pas en charge.
     </NOFRAMES>
 </FRAMESET>
+<FRAMESET rows="1*,50,3*">
+    <FRAME src="logo.png">
+    <FRAME src="http://www.google.be">
+    <FRAME src="structure/bottom.htm">
+</FRAMESET>      
 
 <body>
 </body>
