--- a/boutique.html.html
+++ b/boutique.html.html
@@ -7,6 +7,6 @@
 
 <body>
 	<center><h3><a href="page01.html"><img src="D:\boulots\ACTUEL NELLE CALEDONIE\ACTUEL-23\web\eau sur Mars/MARS-600x338.jpg"/></a><h3></center>
-<center><h3>La Boutique a la mode</h3></center>
+<center><h3>La Boutique a la mode avec moi</h3></center>
 </body>
 </html>
